--- a/app/modules/home/viewCount.html
+++ b/app/modules/home/viewCount.html
@@ -17,7 +17,7 @@
     <ng-md-icon icon="description"></ng-md-icon>
 </div>
 <md-select id="mg-courseSelector" ng-change="onCourseSelectValueChange(ddlvalue)"  data-ng-model="ddlvalue"  placeholder="Select courses"
-                   md-on-close="clearSearchTerm()"
+                   md-on-close="clearSearchTerm()" md-on-open="loadCourses()"
                    data-md-container-class="selectdemoSelectHeader"
                    multiple flex style="text-align: center;">
           <md-select-header class="demo-select-header">
@@ -27,7 +27,7 @@
                    class="demo-header-searchbox _md-text" layout="center center">
           </md-select-header>
           <md-optgroup label="courses">
-            <md-option ng-value="course" ng-repeat="course in courses track by $index">{{course.title}}</md-option>
+            <md-option ng-value="course" ng-repeat="course in courses">{{course.name}}</md-option>
           </md-optgroup>
     </md-select>
  </div>
@@ -37,7 +37,7 @@
                     <ng-md-icon icon="people"></ng-md-icon>
                 </div>
             <md-select  ng-change="onUserSelectValueChange(ddlvalue1)"  data-ng-model="ddlvalue1" placeholder="Select users"
-                   md-on-close="clearSearchTerm()"
+                   md-on-close="clearSearchTerm()" md-on-open="loadUsers()"
                    data-md-container-class="selectdemoSelectHeader"
                    multiple flex style="text-align: center;">
           <md-select-header class="demo-select-header">
@@ -46,8 +46,9 @@
                    placeholder="Search for a Users"
                    class="demo-header-searchbox _md-text">
           </md-select-header>
+
           <md-optgroup label="users">
-            <md-option ng-value="user" ng-repeat="user in users track by $index">{{user.name}}</md-option>
+            <md-option ng-value="user" ng-repeat="user in users">{{user.name}}</md-option>
           </md-optgroup>
         </md-select>
 </div>
