--- a/app/modules/home/dashboard.html
+++ b/app/modules/home/dashboard.html
@@ -22,15 +22,15 @@
       <md-card flex="50">
         <md-card-title>
           <md-card-title-text>
-            <span class="md-headline">Time Spent</span>
-            <span class="md-subhead">Shows Time spent if the user on each courses</span>
+            <span class="md-headline">Last Visited</span>
+            <span class="md-subhead">Shows Last Visited data of user</span>
           </md-card-title-text>
           <md-card-title-media>
             <div class="md-media-lg card-media timeSpentBg"></div>
           </md-card-title-media>
         </md-card-title>
         <md-card-actions layout="row" layout-align="end center">
-          <md-button class="md-primary" ng-click="redirectToTimeSpent()">Show Time Spent</md-button>
+          <md-button class="md-primary" ng-click="redirectToTimeSpent()">Show Last Visited</md-button>
         </md-card-actions>
       </md-card>
     </div>
