Adding total viewcount to dashboard

--- a/app/modules/home/dashboard.html
+++ b/app/modules/home/dashboard.html
@@ -4,11 +4,11 @@
 
   <md-content class="md-padding" layout-xs="column" layout="row">
     <div flex layout="row">
-      <md-card flex="50">
+      <md-card flex="50" >
         <md-card-title>
           <md-card-title-text>
             <span class="md-headline">View Count</span>
-            <span class="md-subhead">Shows view Count of the user corresponding to its courses</span>
+            <span class="md-subhead">Total view count of the marksharks application <h1>{{totalViewCount}}</h1></span>
           </md-card-title-text>
           <md-card-title-media>
             <div class="md-media-lg card-media viewCountBg"></div>
