--- a/app/modules/home/viewCount.html
+++ b/app/modules/home/viewCount.html
@@ -135,14 +135,14 @@
             </md-button>
   </md-content>
   </div>
-  <div  layout="row"       layout-align="start center">
+  <div  layout="row" layout-align="space-between center">
   <div layout="row" layout-wrap  md-cols-xs="1" md-cols-sm="2" md-cols-md="4" md-cols-gt-md="6">
-  <div google-chart chart="chartObject" style="height:600px; width:100%;"></div>
+  <div google-chart chart="chartObject" style="height:600px; width:80%;"></div>
   </div>
   <div layout="row" layout-wrap  md-cols-xs="1" md-cols-sm="2" md-cols-md="4" md-cols-gt-md="6">
-  <div google-chart chart="chartObject1" style="height:600px; width:100%;"></div>
+  <div google-chart chart="chartObject1" style="height:600px; width:80%;"></div>
   </div>
    <div layout="row" layout-wrap  md-cols-xs="1" md-cols-sm="2" md-cols-md="4" md-cols-gt-md="6">
-  <div google-chart chart="chartObject2" style="height:600px; width:100%;"></div>
+  <div google-chart chart="chartObject2" style="height:600px; width:80%;"></div>
   </div>
 </div>
