--- a/app/modules/home/dashboard.html
+++ b/app/modules/home/dashboard.html
@@ -8,7 +8,7 @@
         <md-card-title>
           <md-card-title-text>
             <span class="md-headline">View Count</span>
-            <span class="md-subhead">Total view count of the marksharks application <h1>{{totalViewCount}}</h1></span>
+            <span class="md-subhead">Marksharks application was accessed <a href="#/viewcount">{{totalViewCount}} </a> times</span>
           </md-card-title-text>
           <md-card-title-media>
             <div class="md-media-lg card-media viewCountBg"></div>
